@@ -42,7 +42,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -101,7 +100,7 @@ class LocalLogTest {
     }
 
     private List<SimpleRecord> kvsToRecords(List<KeyValue> keyValues) {
-        return keyValues.stream().map(KeyValue::toRecord).collect(Collectors.toList());
+        return keyValues.stream().map(KeyValue::toRecord).toList();
     }
 
     private List<KeyValue> recordsToKvs(Iterable<Record> records) {
@@ -199,7 +198,7 @@ class LocalLogTest {
         assertEquals(oldConfig, log.config());
 
         Properties props = new Properties();
-        props.put(TopicConfig.SEGMENT_BYTES_CONFIG, oldConfig.segmentSize + 1);
+        props.put(TopicConfig.SEGMENT_BYTES_CONFIG, oldConfig.segmentSize() + 1);
         LogConfig newConfig = new LogConfig(props);
         log.updateConfig(newConfig);
         assertEquals(newConfig, log.config());
@@ -497,7 +496,7 @@ class LocalLogTest {
     private List<Long> nonActiveBaseOffsetsFrom(long startOffset) {
         return log.segments().nonActiveLogSegmentsFrom(startOffset).stream()
                 .map(LogSegment::baseOffset)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String topicPartitionName(String topic, String partition) {
@@ -653,12 +652,12 @@ class LocalLogTest {
         List<KeyValue> keyValues2 = List.of(new KeyValue("k2", "v2"));
         appendRecords(keyValues2.stream()
                 .map(kv -> kv.toRecord(MOCK_TIME.milliseconds() + 10))
-                .collect(Collectors.toList()),
+                .toList(),
                 1L);
         assertEquals(2, log.logEndOffset(), "Expect two records in the log");
         FetchDataInfo readResult = readRecords(0L);
         assertEquals(2L, Utils.toList(readResult.records.records()).size());
-        assertEquals(Stream.concat(keyValues1.stream(), keyValues2.stream()).collect(Collectors.toList()), recordsToKvs(readResult.records.records()));
+        assertEquals(Stream.concat(keyValues1.stream(), keyValues2.stream()).toList(), recordsToKvs(readResult.records.records()));
 
         // roll so that active segment is empty
         log.roll(0L);
